tests/base/invalid/List_CompileFail_1.whiley
import * from whiley.lang.*

void ::main(System.Console sys,[string] args):
     x = 1
     a2[0] = x
